hw_6: refactor Resume and improve storage tests
- use constructor delegation with this() in Resume.
- regenerate equals and hashCode to include all fields.
- extract common assertions in AbstractStorageTest (assertStorageSizeAndContents()).
- check empty list in clearTest via assertEquals(List.of(), ...).